config/backup/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2025-03-23T16:45:51Z"
    labels:
      component: apiserver
      provider: kubernetes
    name: kubernetes
    namespace: default
    resourceVersion: "230"
    uid: 6230f419-d880-46a7-a8e0-5b4fe5f218e6
  spec:
    clusterIP: 10.96.0.1
    clusterIPs:
    - 10.96.0.1
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: keycloak
      meta.helm.sh/release-namespace: keycloak
    creationTimestamp: "2025-03-24T14:19:19Z"
    labels:
      app.kubernetes.io/component: keycloak
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/version: 26.1.4
      helm.sh/chart: keycloak-24.4.13
    name: keycloak
    namespace: keycloak
    resourceVersion: "9533"
    uid: 4f47934f-1372-4115-b9ee-3321a50605de
  spec:
    clusterIP: 10.110.44.20
    clusterIPs:
    - 10.110.44.20
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    selector:
      app.kubernetes.io/component: keycloak
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: keycloak
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: keycloak
      meta.helm.sh/release-namespace: keycloak
    creationTimestamp: "2025-03-24T14:19:19Z"
    labels:
      app.kubernetes.io/component: keycloak
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/version: 26.1.4
      helm.sh/chart: keycloak-24.4.13
    name: keycloak-headless
    namespace: keycloak
    resourceVersion: "9524"
    uid: 1b7c57e7-e298-4de3-b930-5acc8972dcac
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/component: keycloak
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: keycloak
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: keycloak
      meta.helm.sh/release-namespace: keycloak
    creationTimestamp: "2025-03-24T14:19:19Z"
    labels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 17.4.0
      helm.sh/chart: postgresql-16.5.0
    name: keycloak-postgresql
    namespace: keycloak
    resourceVersion: "9538"
    uid: d6fbda04-4899-4c58-a6c8-fa25152c6062
  spec:
    clusterIP: 10.96.111.43
    clusterIPs:
    - 10.96.111.43
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-postgresql
      port: 5432
      protocol: TCP
      targetPort: tcp-postgresql
    selector:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: postgresql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: keycloak
      meta.helm.sh/release-namespace: keycloak
    creationTimestamp: "2025-03-24T14:19:19Z"
    labels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 17.4.0
      helm.sh/chart: postgresql-16.5.0
    name: keycloak-postgresql-hl
    namespace: keycloak
    resourceVersion: "9523"
    uid: 81fb6b22-d6b6-41cb-9db5-d1b977be6c3a
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-postgresql
      port: 5432
      protocol: TCP
      targetPort: tcp-postgresql
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: postgresql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/port: "9153"
      prometheus.io/scrape: "true"
    creationTimestamp: "2025-03-23T16:45:51Z"
    labels:
      k8s-app: kube-dns
      kubernetes.io/cluster-service: "true"
      kubernetes.io/name: CoreDNS
    name: kube-dns
    namespace: kube-system
    resourceVersion: "270"
    uid: fc6c9560-bf64-4c1e-918e-0cff20ab2840
  spec:
    clusterIP: 10.96.0.10
    clusterIPs:
    - 10.96.0.10
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: metrics
      port: 9153
      protocol: TCP
      targetPort: 9153
    selector:
      k8s-app: kube-dns
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: operator
      meta.helm.sh/release-namespace: minio-operator
    creationTimestamp: "2025-03-24T07:56:14Z"
    labels:
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/version: v7.0.1
      helm.sh/chart: operator-7.0.1
    name: operator
    namespace: minio-operator
    resourceVersion: "2513"
    uid: 0cde5e2b-03e6-4ee0-ba11-dd0641ac4a66
  spec:
    clusterIP: 10.107.49.207
    clusterIPs:
    - 10.107.49.207
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 4221
      protocol: TCP
      targetPort: 4221
    selector:
      app.kubernetes.io/instance: operator
      app.kubernetes.io/name: operator
      operator: leader
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: operator
      meta.helm.sh/release-namespace: minio-operator
    creationTimestamp: "2025-03-24T07:56:14Z"
    labels:
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/version: v7.0.1
      helm.sh/chart: operator-7.0.1
    name: sts
    namespace: minio-operator
    resourceVersion: "2509"
    uid: 15cfbe65-a3fc-4f29-962b-176e627cdda0
  spec:
    clusterIP: 10.100.170.77
    clusterIPs:
    - 10.100.170.77
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 4223
      protocol: TCP
      targetPort: 4223
    selector:
      app.kubernetes.io/instance: operator
      app.kubernetes.io/name: operator
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2025-03-24T13:30:54Z"
    name: minio
    namespace: minio-tenant
    ownerReferences:
    - apiVersion: minio.min.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: Tenant
      name: myminio-tenant
      uid: fe35f54c-2ce7-4889-95bd-c8a146e9ed3e
    resourceVersion: "6284"
    uid: 01006eb1-db30-4f95-be7b-5d8c5ee8cbed
  spec:
    clusterIP: 10.111.68.224
    clusterIPs:
    - 10.111.68.224
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https-minio
      port: 443
      protocol: TCP
      targetPort: 9000
    selector:
      v1.min.io/tenant: myminio-tenant
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2025-03-24T13:30:54Z"
    name: myminio-tenant-console
    namespace: minio-tenant
    ownerReferences:
    - apiVersion: minio.min.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: Tenant
      name: myminio-tenant
      uid: fe35f54c-2ce7-4889-95bd-c8a146e9ed3e
    resourceVersion: "6290"
    uid: cc3cc93a-bdd6-4a58-849a-6ae70f7745a7
  spec:
    clusterIP: 10.100.120.58
    clusterIPs:
    - 10.100.120.58
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https-console
      port: 9443
      protocol: TCP
      targetPort: 9443
    selector:
      v1.min.io/tenant: myminio-tenant
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2025-03-24T13:30:54Z"
    name: myminio-tenant-hl
    namespace: minio-tenant
    ownerReferences:
    - apiVersion: minio.min.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: Tenant
      name: myminio-tenant
      uid: fe35f54c-2ce7-4889-95bd-c8a146e9ed3e
    resourceVersion: "6295"
    uid: dafda119-bb72-453c-a543-fc47a88aa369
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https-minio
      port: 9000
      protocol: TCP
      targetPort: 9000
    publishNotReadyAddresses: true
    selector:
      v1.min.io/tenant: myminio-tenant
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
